<resources>
    <string name="app_name">Crud Firebase</string>
    <string name="logo">Logo</string>
    <string name="senh">Senha</string>
    <string name="password">Senha</string>
    <string name="login">Login</string>
    <string name="criar_conta">Não tem cadastro? Crie uma conta grátis.</string>
    <string name="esqueceu_senha">Esqueceu a senha?</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="edt_hint_nome">Nome</string>
    <string name="btn_cadastrar">Cadastrar</string>
    <string name="hint_email">E-mail</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="dialog_nome">Nome</string>
    <string name="telefone">Telefone</string>
    <string name="e_mail">E-mail</string>
    <string name="ok_clicado">OK clicado</string>
    <string name="preencha_o_campo_nome">Preencha o campo nome</string>
    <string name="pelo_menos_um_dado_cadastral">Para criar um contato, você deve cadastrar um e-mail ou telefone</string>
    <string name="criar_nova_senha">Criar uma nova senha</string>
    <string name="enviar">Enviar</string>
</resources>
