<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/dialog_txtTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/cadastrar"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/dialog_edtNome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:hint="@string/dialog_nome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_txtTitulo" />

    <EditText
        android:id="@+id/dialog_edtEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text=""
        android:hint="@string/e_mail"
        app:layout_constraintEnd_toEndOf="@+id/dialog_edtNome"
        app:layout_constraintStart_toStartOf="@+id/dialog_edtNome"
        app:layout_constraintTop_toBottomOf="@+id/dialog_edtNome" />

    <EditText
        android:id="@+id/dialog_edtTelefone"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/telefone"
        android:inputType=""
        android:text=""
        app:layout_constraintEnd_toEndOf="@+id/dialog_edtEmail"
        app:layout_constraintStart_toStartOf="@+id/dialog_edtEmail"
        app:layout_constraintTop_toBottomOf="@+id/dialog_edtEmail" />

    <Button
        android:id="@+id/dialog_btnCadastrar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/btn_cadastrar"
        android:textColor="@android:color/white"
        android:background="@drawable/style_button"
        app:layout_constraintEnd_toEndOf="@+id/dialog_edtTelefone"
        app:layout_constraintStart_toStartOf="@+id/dialog_edtTelefone"
        app:layout_constraintTop_toBottomOf="@+id/dialog_edtTelefone" />

</android.support.constraint.ConstraintLayout>